dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: simple-service
  name: simple-service
spec:
  replicas: 1
  selector:
    deploymentconfig: simple-service
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: simple-service
        deploymentconfig: simple-service
    spec:
      containers:
      - image: simple-service:latest
        imagePullPolicy: Always
        name: simple-service
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - simple-service
      from:
        kind: ImageStreamTag
        name: simple-service:latest
        namespace: myproject
    type: ImageChange
