svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-service
  name: simple-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: simple-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
