istio-destination-rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: istio-system
spec:
  host: "*.experimental.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
